Hardcoded the homepage

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <h1>Napoli Pizzeria</h1>
+        <div class="navbuttons">
+            <nav><button>Home</button></nav>
+            <nav><button>Menu</button></nav>
+            <nav><button>About</button></nav>
+        </div>
+    </header>
+    <div id="content">
+        <div class="left">
+            <h2 id="slogan">The Best Pizza in Town</h2>
+            <p id="catchphrase">Serving the most delicious, freshest, tastiest, traditional Italian pizza since 1914</p>
+            <div class="order">
+                <button type="button">Order Now</button>
+                <p>or come and meet us!</p>
+            </div>
+        </div>
+        <div class="right">Imagem</div>
+    </div>
 </body>
 </html>
